// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatting should add the currency symbol to the formatting 1`] = `"$0.00"`;

exports[`Formatting should format a Money value 1`] = `"0.00"`;

exports[`Make Money should make a Money from a decimal 1`] = `
Object {
  "amount": 532,
  "currency": "CAD",
}
`;

exports[`Make Money should make a Money from an object 1`] = `
Object {
  "amount": 500,
  "currency": "USD",
}
`;

exports[`Make Money should make a Money with currency specified 1`] = `
Object {
  "amount": 632,
  "currency": "USD",
}
`;

exports[`Make Money should return 0.00 canadian dollars by default 1`] = `
Object {
  "amount": 0,
  "currency": "CAD",
}
`;

exports[`Transforms should transform objects to Money 1`] = `
Object {
  "field1": Object {
    "amount": 500,
    "currency": "CAD",
  },
  "field2": Array [
    Object {
      "amount": 500,
      "currency": "CAD",
    },
  ],
}
`;
